--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,13 @@ pytes.py
 .env
 
 # Ignorar archivo de base de datos SQL
-notificacion_db.sql
+# notificacion_db.sql
 
 # Ignorar caché de Python
 __pycache__/
 
 # Ignorar entorno virtual
 venvNoti/
-
 
 # 
 back.py
